k8s-webhook/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mitigation-webhook-log4j

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mitigation-webhook
  namespace: mitigation-webhook-log4j
  labels:
    app: mitigation-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mitigation-webhook
  template:
    metadata:
      labels:
        app: mitigation-webhook
    spec:
      volumes:
        - name: webhook-secret-vol
          secret:
            secretName: webhook-secret
      containers:
        - name: mitigation-webhook
          image: public.ecr.aws/v2k0k1b1/k8s/mitigation-webhook-log4j:v1.1.0
          ports:
            - containerPort: 8443
          args:
            - "--key=/certs/tls.key"
            - "--cert=/certs/tls.crt"
          volumeMounts:
            - name: webhook-secret-vol
              mountPath: "/certs"
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "512m"
---
apiVersion: v1
kind: Service
metadata:
  name: mitigation-webhook-svc
  namespace: mitigation-webhook-log4j
spec:
  selector:
    app: mitigation-webhook
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "mitigation-webhook-config"
webhooks:
  - name: "mitigation-webhook-svc.mitigation-webhook-log4j.svc"
    namespaceSelector:
      matchExpressions:
        - key: "kubernetes.io/metadata.name"
          operator: NotIn
          values: ["kube-system", "kube-public"]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: "mitigation-webhook-log4j"
        name: "mitigation-webhook-svc"
        path: "/webhook"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlFSkRDQ0F3eWdBd0lCQWdJVUUxajV6Sk52WWlTbUg1QTAxYnVoU2RyWDRXUXdEUVlKS29aSWh2Y05BUUVMDQpCUUF3UGpFOE1Eb0dBMVVFQXd3emJXbDBhV2RoZEdsdmJpMTNaV0pvYjI5ckxYTjJZeTV0YVhScFoyRjBhVzl1DQpMWGRsWW1odmIyc3RiRzluTkdvdWMzWmpNQjRYRFRJeE1USXlNVEU1TWpjeU1sb1hEVEl5TVRJeU1URTVNamN5DQpNbG93UGpFOE1Eb0dBMVVFQXd3emJXbDBhV2RoZEdsdmJpMTNaV0pvYjI5ckxYTjJZeTV0YVhScFoyRjBhVzl1DQpMWGRsWW1odmIyc3RiRzluTkdvdWMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDDQpBUUVB [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
